ENH: document `formulate(reference_subsystem=None)`

--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -254,8 +254,15 @@
     "model_builder = DalitzPlotDecompositionBuilder(DECAY, min_ls=(False, True))\n",
     "for chain in model_builder.decay.chains:\n",
     "    model_builder.dynamics_choices.register_builder(chain, formulate_breit_wigner)\n",
-    "model = model_builder.formulate(reference_subsystem=1)\n",
+    "model = model_builder.formulate()\n",
     "model.intensity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that subsystem `3` (with the $\\Lambda^*$ resonances and recoil $\\pi^+$) has been selected as reference subsystem for the Wigner‑$D$ functions. This is computationally more efficient, because that subsystem contains most resonances."
    ]
   },
   {
