FIX: fix LaTeX syntax error in Sphinx rendering

--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, the aligned amplitudes are built up of Wigner-$d$ functions, Clebsch–Gordan coefficients ($C$), a resonance parametrization ($\\mathcal{R}(\\sigma)$), and two coupling symbols $\\mathcal{H}^\\text{prod}_\\dots,\\mathcal{H}^\\text{dec}_\\dots$. In some cases, you want to combine the couplings into one scaling factor. That can be done with the `use_coefficients` flag:"
+    "By default, the aligned amplitudes are built up of Wigner-$d$ functions, Clebsch–Gordan coefficients ($C$), a resonance parametrization ($\\mathcal{R}(\\sigma)$), and two coupling symbols $\\mathcal{H}^\\text{prod}_{\\dots}, \\mathcal{H}^\\text{dec}_{\\dots}$. In some cases, you want to combine the couplings into one scaling factor. That can be done with the `use_coefficients` flag:"
    ]
   },
   {
