--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -262,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that subsystem `3` (with the $\\Lambda^*$ resonances and recoil $\\pi^+$) has been selected as reference subsystem for the Wigner‑$D$ functions. This is computationally more efficient, because that subsystem contains most resonances."
+    "Notice that subsystem `3` (with the $\\Lambda^*$ resonances and recoil $\\pi^+$) has been selected as reference subsystem for the Wigner‑$d$ functions. This is computationally more efficient, because that subsystem contains most resonances."
    ]
   },
   {
@@ -270,8 +270,6 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-input",
-     "hide-output",
      "scroll-output"
     ]
    },
@@ -284,7 +282,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, the aligned amplitudes are built up of Wigner-$d$ functions, Clebsch–Gordan coefficients ($C$), a resonance parametrization ($\\mathcal{R}(\\sigma)$), and two coupling symbols $\\mathcal{H}^\\text{prod}_{\\dots}, \\mathcal{H}^\\text{dec}_{\\dots}$. In some cases, you want to combine the couplings into one scaling factor. That can be done with the `use_coefficients` flag:"
+    "By default, the aligned amplitudes are built up of Wigner-$d$ functions, Clebsch–Gordan coefficients ($C$), a resonance parametrization ($\\mathcal{R}(\\sigma)$), and two coupling symbols $\\mathcal{H}^\\text{prod}_{\\dots}, \\mathcal{H}^\\text{dec}_{\\dots}$. In some cases, you want to combine the couplings into one scaling factor. That can be done with the `use_coefficients` flag. The following example also explicitly specifies the reference subsystem (which is otherwise automatically chosen)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = model_builder.formulate(reference_subsystem=1, use_coefficients=True)"
    ]
   },
   {
@@ -293,11 +300,13 @@
    "metadata": {
     "jupyter": {
      "source_hidden": true
-    }
+    },
+    "tags": [
+     "hide-input"
+    ]
    },
    "outputs": [],
    "source": [
-    "model = model_builder.formulate(reference_subsystem=1, use_coefficients=True)\n",
     "(symbol, expr), *_ = model.amplitudes.items()\n",
     "Latex(aslatex({symbol: expr}, terms_per_line=1))"
    ]
