ENH: automatically select best reference subsystem (#178)
* ENH: document `formulate(reference_subsystem=None)`

--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -254,8 +254,15 @@
     "model_builder = DalitzPlotDecompositionBuilder(DECAY, min_ls=(False, True))\n",
     "for chain in model_builder.decay.chains:\n",
     "    model_builder.dynamics_choices.register_builder(chain, formulate_breit_wigner)\n",
-    "model = model_builder.formulate(reference_subsystem=1)\n",
+    "model = model_builder.formulate()\n",
     "model.intensity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that subsystem `3` (with the $\\Lambda^*$ resonances and recoil $\\pi^+$) has been selected as reference subsystem for the Wigner‑$d$ functions. This is computationally more efficient, because that subsystem contains most resonances."
    ]
   },
   {
@@ -263,22 +270,28 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-input",
-     "full-width",
-     "hide-output",
      "scroll-output"
     ]
    },
    "outputs": [],
    "source": [
-    "Latex(aslatex(model.amplitudes).replace(R\"\\sum_\", R\"\\sum\\limits_\"))"
+    "Latex(aslatex(model.amplitudes, terms_per_line=1))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, the aligned amplitudes are built up of Wigner-$d$ functions, Clebsch–Gordan coefficients ($C$), a resonance parametrization ($\\mathcal{R}(\\sigma)$), and two coupling symbols $\\mathcal{H}^\\text{prod}_\\dots,\\mathcal{H}^\\text{dec}_\\dots$. In some cases, you want to combine the couplings into one scaling factor. That can be done with the `use_coefficients` flag:"
+    "By default, the aligned amplitudes are built up of Wigner-$d$ functions, Clebsch–Gordan coefficients ($C$), a resonance parametrization ($\\mathcal{R}(\\sigma)$), and two coupling symbols $\\mathcal{H}^\\text{prod}_{\\dots}, \\mathcal{H}^\\text{dec}_{\\dots}$. In some cases, you want to combine the couplings into one scaling factor. That can be done with the `use_coefficients` flag. The following example also explicitly specifies the reference subsystem (which is otherwise automatically chosen)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = model_builder.formulate(reference_subsystem=1, use_coefficients=True)"
    ]
   },
   {
@@ -289,14 +302,13 @@
      "source_hidden": true
     },
     "tags": [
-     "full-width"
+     "hide-input"
     ]
    },
    "outputs": [],
    "source": [
-    "model = model_builder.formulate(reference_subsystem=1, use_coefficients=True)\n",
     "(symbol, expr), *_ = model.amplitudes.items()\n",
-    "Latex(aslatex({symbol: expr}).replace(R\"\\sum_\", R\"\\sum\\limits_\"))"
+    "Latex(aslatex({symbol: expr}, terms_per_line=1))"
    ]
   }
  ],
@@ -319,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
