BREAK: use `DefinedExpression` in dynamics builder

--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -433,7 +433,7 @@
     "    final_state = get_final_state(model)\n",
     "    return DefinedExpression(\n",
     "        expression=BuggBreitWigner(s, mass, width, m1, m2, γ),\n",
-    "        definitions={\n",
+    "        parameters={\n",
     "            mass: function_definition[\"mass\"],\n",
     "            width: function_definition[\"width\"],\n",
     "            m1: final_state[i].mass,\n",
@@ -989,7 +989,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
