--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -31,7 +31,7 @@
     "import sympy as sp\n",
     "from IPython.display import Latex, Markdown\n",
     "\n",
-    "from ampform_dpd import DalitzPlotDecompositionBuilder\n",
+    "from ampform_dpd import DalitzPlotDecompositionBuilder, DefinedExpression\n",
     "from ampform_dpd.adapter.qrules import (\n",
     "    load_particles,\n",
     "    normalize_state_ids,\n",
@@ -194,7 +194,7 @@
    "source": [
     "def formulate_breit_wigner(\n",
     "    decay_chain: ThreeBodyDecayChain,\n",
-    ") -> tuple[BreitWignerMinL, dict[sp.Symbol, float]]:\n",
+    ") -> DefinedExpression:\n",
     "    s = get_mandelstam_s(decay_chain.decay_node)\n",
     "    child1_mass, child2_mass = map(create_mass_symbol, decay_chain.decay_products)\n",
     "    l_dec = sp.Rational(decay_chain.outgoing_ls.L)\n",
@@ -231,7 +231,7 @@
     "        R_dec,\n",
     "        R_prod,\n",
     "    )\n",
-    "    return dynamics, parameter_defaults"
+    "    return DefinedExpression(dynamics, parameter_defaults)"
    ]
   },
   {
@@ -262,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that subsystem `3` (with the $\\Lambda^*$ resonances and recoil $\\pi^+$) has been selected as reference subsystem for the Wigner‑$d$ functions. This is computationally more efficient, because that subsystem contains most resonances."
+    "Notice that subsystem `3` (with the $\\varLambda^*$ resonances and recoil $\\pi^+$) has been selected as reference subsystem for the Wigner‑$d$ functions. This is computationally more efficient, because that subsystem contains most resonances."
    ]
   },
   {
@@ -331,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
