DOC: update installation instructions

--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The fastest way of installing this package is through PyPI:\n",
+    "The fastest way of installing this package is through PyPI ([`ampform-dpd`](https://pypi.org/project/ampform-dpd)):\n",
     "\n",
     "```shell\n",
     "python3 -m pip install ampform-dpd\n",
@@ -50,18 +50,12 @@
     "python3 -m pip install git+https://github.com/ComPWA/ampform@main\n",
     "```\n",
     "\n",
-    "You can substitute `stable` in the above command with `main` or any of the [tags](https://github.com/ComPWA/ampform-dpd/tags) listed under the [releases](https://github.com/ComPWA/ampform-dpd/releases). In a similar way, you can list `ampform-dpd` as a dependency of your application in either `setup.cfg` or a `requirements.txt` file as:\n",
-    "\n",
-    "```text\n",
-    "ampform-dpd @ git+https://github.com/ComPWA/ampform-dpd@main\n",
-    "```\n",
-    "\n",
-    "However, we highly recommend using the more dynamic, {ref}`'editable installation' <compwa:develop:Editable installation>` instead. This goes as follows:\n",
+    "You can substitute `main` in the above command with any of the [tags](https://github.com/ComPWA/ampform-dpd/tags) listed under the [releases](https://github.com/ComPWA/ampform-dpd/releases) or any other commit hashes. However, we highly recommend using the more dynamic, {ref}`'editable installation' <compwa:develop:Editable installation>` instead. This goes as follows:\n",
     "\n",
     "1. Get the source code (see [the Pro Git Book](https://git-scm.com/book/en/v2)):\n",
     "\n",
     "   ```shell\n",
-    "   git clone https://github.com/ComPWA/ampform-dpd.git\n",
+    "   git clone https://github.com/ComPWA/ampform-dpd\n",
     "   cd ampform-dpd\n",
     "   ```\n",
     "\n",
@@ -70,28 +64,20 @@
     "3. Install the project in {ref}`'editable installation' <compwa:develop:Editable installation>` with {ref}`additional dependencies <compwa:develop:Optional dependencies>` for the developer:\n",
     "\n",
     "   ```shell\n",
-    "   python3 -m pip install -e .[dev]\n",
+    "   python3 -m pip install -e . --group dev\n",
     "   ```\n",
     "\n",
     "That's all! Have a look at the {doc}`/index` page to try out the package, and see {doc}`compwa:develop` for tips on how to work with this 'editable' developer setup!\n",
     "\n",
     ":::{tip}\n",
-    "\n",
-    "It's easiest to install the project in a [Conda](https://docs.conda.io/en/latest/miniconda.html) environment. In that case, to install in editable mode, just run:\n",
-    "\n",
-    "```shell\n",
-    "conda env create\n",
-    "conda activate ampform-dpd\n",
-    "```\n",
-    "\n",
-    "This way of installing is also safer, because it {ref}`pins all dependencies <compwa:develop:Pinning dependency versions>`. Note you can also pin dependencies with `pip`, by running:\n",
+    "It's easiest to install the project in a virtual environment with [`uv`](https://docs.astral.sh/uv). In that case, to install in editable mode, just run:\n",
     "\n",
     "```shell\n",
-    "python3 -m pip install -e .[dev] -c .constraints/py3.x.txt\n",
+    "uv sync\n",
+    "source .venv/bin/activate\n",
     "```\n",
     "\n",
-    "where you should replace the `3.x` with the version of Python you want to use.\n",
-    "\n",
+    "This way of installing is also safer, because it {ref}`pins all dependencies <compwa:develop:Pinning dependency versions>`.\n",
     ":::\n",
     "\n",
     "<!-- cspell:ignore pkpi -->"
