--- a/docs/xib2pkk.ipynb
+++ b/docs/xib2pkk.ipynb
@@ -24,12 +24,9 @@
    },
    "outputs": [],
    "source": [
-    "from __future__ import annotations\n",
-    "\n",
     "import logging\n",
     "import os\n",
     "import warnings\n",
-    "from typing import TYPE_CHECKING\n",
     "\n",
     "import graphviz\n",
     "import jax.numpy as jnp\n",
@@ -40,6 +37,7 @@
     "from ampform.dynamics.form_factor import BlattWeisskopfSquared, FormFactor\n",
     "from IPython.display import Latex, Markdown\n",
     "from tensorwaves.data.transform import SympyDataTransformer\n",
+    "from tensorwaves.interface import DataSample, ParametrizedFunction\n",
     "from tqdm.auto import tqdm\n",
     "\n",
     "from ampform_dpd import DalitzPlotDecompositionBuilder\n",
@@ -60,9 +58,7 @@
     "\n",
     "STATIC_PAGE = \"EXECUTE_NB\" in os.environ\n",
     "if STATIC_PAGE:\n",
-    "    logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)\n",
-    "if TYPE_CHECKING:\n",
-    "    from tensorwaves.interface import DataSample, ParametrizedFunction"
+    "    logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)"
    ]
   },
   {
@@ -563,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
