DOC: add usage explanation on landing page

--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -227,6 +227,468 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Usage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The core class of this package is the {class}`~ampform_dpd.DalitzPlotDecompositionBuilder`. It requires a {class}`.ThreeBodyDecay` object to formulate amplitude models. You can create such a decay object by hand, but it is easier to generate it with [QRules](https://qrules.rtfd.io). Here is an example for the decay $J/\\psi \\to p \\bar{\\varSigma}^- \\bar{K}^0$. In the last step, we \"normalize\" the state IDs of the incoming and outgoing states so that they match the index naming scheme of the [Dalitz-Plot Decomposition paper](https://journals.aps.org/prd/abstract/10.1103/PhysRevD.101.034033)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import qrules\n",
+    "\n",
+    "from ampform_dpd.adapter.qrules import normalize_state_ids\n",
+    "\n",
+    "reaction = qrules.generate_transitions(\n",
+    "    initial_state=\"J/psi(1S)\",\n",
+    "    final_state=[\"p\", \"Sigma~-\", \"K~0\"],\n",
+    "    allowed_interaction_types=\"strong\",\n",
+    "    mass_conservation_factor=0,\n",
+    ")\n",
+    "reaction = normalize_state_ids(reaction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "mystnb": {
+     "code_prompt_show": "Render decay with Graphviz"
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import graphviz\n",
+    "\n",
+    "dot = qrules.io.asdot(reaction, collapse_graphs=True)\n",
+    "graphviz.Source(dot)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since AmpForm-DPD formulates amplitudes for three-body decays only, it defines its own topology class for encoding the decay chains. You can convert the QRules {class}`~qrules.transition.ReactionInfo` object to such a {class}`.ThreeBodyDecay` as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ampform_dpd.adapter.qrules import to_three_body_decay\n",
+    "\n",
+    "decay = to_three_body_decay(reaction.transitions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The {mod}`ampform_dpd.io` module offers some handy functions for rendering the decay chains in different format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "mystnb": {
+     "code_prompt_show": "Render resonance list as table"
+    },
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import Latex, Markdown\n",
+    "\n",
+    "from ampform_dpd.io import as_markdown_table\n",
+    "\n",
+    "Markdown(as_markdown_table(decay))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "mystnb": {
+     "code_prompt_show": "Render decay chains as LaTeX"
+    },
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import Math\n",
+    "\n",
+    "from ampform_dpd.io import aslatex\n",
+    "\n",
+    "Math(aslatex(decay))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "mystnb": {
+     "code_prompt_show": "Render decay chains as LaTeX (including Jᴾ numbers)"
+    },
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "Math(aslatex(decay, with_jp=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "mystnb": {
+     "code_prompt_show": "Render information about the initial and final state"
+    },
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "Markdown(as_markdown_table([decay.initial_state, *decay.final_state.values()]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "mystnb": {
+     "code_prompt_show": "Render information about the resonances"
+    },
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "resonances = sorted(\n",
+    "    {t.resonance for t in decay.chains},\n",
+    "    key=lambda p: (p.name[0], p.mass),\n",
+    ")\n",
+    "Markdown(as_markdown_table(resonances))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We an now use the decay object to formulate amplitude models. Notice that we do not parametrize the dynamics for each of the chains yet, we only have a simple expression for the unpolarized differential cross-section (\"intensity\") that contains the expected Wigner-$d$ functions for the spin alignment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "full-width"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "from ampform_dpd import DalitzPlotDecompositionBuilder\n",
+    "\n",
+    "model_builder = DalitzPlotDecompositionBuilder(decay)\n",
+    "no_dynamics_model = model_builder.formulate()\n",
+    "no_dynamics_model.intensity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unfortunately, {class}`sympy.Indexed<sympy.tensor.indexed.Indexed>` symbols with a superscript don't render nicely. To fix this, AmpForm-DPD provides the following configuration function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ampform_dpd.io import simplify_latex_rendering\n",
+    "\n",
+    "simplify_latex_rendering()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "full-width"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "no_dynamics_model.intensity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "More interesting is to formulate a model with a dynamics parametrization. The most common choice is a relativistic Breit–Wigner function. It can optionally have form factors for the production vertex and/or for the decay vertex and have an energy-dependent width."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ampform_dpd.dynamics.builder import BreitWignerBuilder\n",
+    "\n",
+    "dynamics_builder = BreitWignerBuilder(\n",
+    "    energy_dependent_width=True,\n",
+    "    production_form_factor=True,\n",
+    "    decay_form_factor=True,\n",
+    ")\n",
+    "for chain in model_builder.decay.chains:\n",
+    "    model_builder.dynamics_choices.register_builder(chain, dynamics_builder)\n",
+    "model = model_builder.formulate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "...or everything as a one-liner:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ampform_dpd import DalitzPlotDecompositionBuilder\n",
+    "from ampform_dpd.dynamics.builder import BreitWignerBuilder\n",
+    "\n",
+    "model_builder = DalitzPlotDecompositionBuilder(decay)\n",
+    "dynamics_builder = BreitWignerBuilder()\n",
+    "for chain in model_builder.decay.chains:\n",
+    "    model_builder.dynamics_choices.register_builder(chain, dynamics_builder)\n",
+    "model = model_builder.formulate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "mystnb": {
+     "code_prompt_show": "Render a small selection of the amplitudes"
+    },
+    "tags": [
+     "hide-input",
+     "full-width"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "selection = {k: v for i, (k, v) in enumerate(model.amplitudes.items()) if i % 13 == 0}\n",
+    "Math(aslatex(selection, terms_per_line=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's an example with a simple Breit–Wigner without form factors:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bw_builder = BreitWignerBuilder(\n",
+    "    energy_dependent_width=False,\n",
+    "    production_form_factor=False,\n",
+    "    decay_form_factor=False,\n",
+    ")\n",
+    "for chain in model_builder.decay.chains:\n",
+    "    model_builder.dynamics_choices.register_builder(chain, bw_builder)\n",
+    "simple_model = model_builder.formulate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "mystnb": {
+     "code_prompt_show": "Rendering of one of the amplitudes"
+    },
+    "tags": [
+     "full-width",
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "(amp_symbol, amp_expr), *_ = simple_model.amplitudes.items()\n",
+    "Math(aslatex({amp_symbol: amp_expr}, terms_per_line=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Custom dynamics can be defined by defining a dynamics builder function that has a signature that matches the {class}`.DynamicsBuilder` protocol."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "mystnb": {
+     "code_prompt_show": "Dynamics builder function"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import sympy as sp\n",
+    "\n",
+    "from ampform_dpd import DefinedExpression\n",
+    "from ampform_dpd.decay import ThreeBodyDecayChain\n",
+    "from ampform_dpd.dynamics.builder import create_mass_symbol, get_mandelstam_s\n",
+    "\n",
+    "\n",
+    "def formulate_gaussian(decay_chain: ThreeBodyDecayChain) -> DefinedExpression:\n",
+    "    resonance = decay_chain.resonance\n",
+    "    s = get_mandelstam_s(decay_chain.decay_node)\n",
+    "    x = sp.sqrt(s)\n",
+    "    mu = create_mass_symbol(resonance)\n",
+    "    sigma2 = sp.Symbol(Rf\"\\sigma_{{{resonance.latex}}}^2\", nonnegative=True)\n",
+    "    return DefinedExpression(\n",
+    "        expression=sp.exp(-((x - mu) ** 2) / (2 * sigma2)),\n",
+    "        parameters={\n",
+    "            mu: resonance.mass,\n",
+    "            sigma2: resonance.width**2,\n",
+    "        },\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "for chain in model_builder.decay.chains:\n",
+    "    model_builder.dynamics_choices.register_builder(chain, formulate_gaussian)\n",
+    "gaussian_model = model_builder.formulate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "mystnb": {
+     "code_prompt_show": "Rendering of one of the amplitudes"
+    },
+    "tags": [
+     "hide-input",
+     "full-width"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "(amp_symbol, amp_expr), *_ = gaussian_model.amplitudes.items()\n",
+    "Math(aslatex({amp_symbol: amp_expr}, terms_per_line=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The {meth}`.DalitzPlotDecompositionBuilder.formulate` method has other arguments that allow you to select a different reference subsystem and to use **one complex-valued coefficient** rather than two couplings per decay vertex. Also notice the tricks used here to hide the trivial summations over the helicities of spin-0 particles."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "full-width"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "for chain in model_builder.decay.chains:\n",
+    "    model_builder.dynamics_choices.register_builder(chain, bw_builder)\n",
+    "coefficient_model = model_builder.formulate(\n",
+    "    cleanup_summations=True,\n",
+    "    reference_subsystem=2,\n",
+    "    use_coefficients=True,\n",
+    ")\n",
+    "coefficient_model.intensity.cleanup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "mystnb": {
+     "code_prompt_show": "Rendering of one of the amplitudes"
+    },
+    "tags": [
+     "hide-input",
+     "full-width"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "(symbol, expr), *_ = coefficient_model.amplitudes.items()\n",
+    "Latex(aslatex({symbol: expr}, terms_per_line=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Examples"
    ]
   },
