--- a/docs/comparison/d2kkk.ipynb
+++ b/docs/comparison/d2kkk.ipynb
@@ -16,6 +16,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "mystnb": {
      "code_prompt_show": "Import Python libraries"
     },
