--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -40,7 +40,6 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "import logging\n",
     "import os\n",
     "\n",
     "import jax.numpy as jnp\n",
@@ -62,7 +61,12 @@
     "    MultichannelBreitWigner,\n",
     "    SimpleBreitWigner,\n",
     ")\n",
-    "from ampform_dpd.io import aslatex, cached, simplify_latex_rendering\n",
+    "from ampform_dpd.io import (\n",
+    "    aslatex,\n",
+    "    cached,\n",
+    "    mute_ampform_warnings,\n",
+    "    simplify_latex_rendering,\n",
+    ")\n",
     "from ampform_dpd.io.serialization.amplitude import (\n",
     "    HelicityRecoupling,\n",
     "    LSRecoupling,\n",
@@ -90,8 +94,7 @@
     "\n",
     "simplify_latex_rendering()\n",
     "if STATIC_PAGE := \"EXECUTE_NB\" in os.environ:\n",
-    "    logging.getLogger(\"ampform.sympy\").setLevel(logging.ERROR)\n",
-    "    logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)"
+    "    mute_ampform_warnings()"
    ]
   },
   {
