--- a/docs/comparison/jpsi2pipipi.ipynb
+++ b/docs/comparison/jpsi2pipipi.ipynb
@@ -65,15 +65,20 @@
     "from ampform_dpd import DalitzPlotDecompositionBuilder\n",
     "from ampform_dpd.adapter.qrules import normalize_state_ids, to_three_body_decay\n",
     "from ampform_dpd.decay import Particle\n",
-    "from ampform_dpd.io import as_markdown_table, aslatex, cached, simplify_latex_rendering\n",
+    "from ampform_dpd.io import (\n",
+    "    as_markdown_table,\n",
+    "    aslatex,\n",
+    "    cached,\n",
+    "    mute_ampform_warnings,\n",
+    "    simplify_latex_rendering,\n",
+    ")\n",
     "\n",
     "simplify_latex_rendering()\n",
     "logging.getLogger(\"jax\").setLevel(logging.ERROR)  # mute JAX\n",
     "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"  # mute TF\n",
     "warnings.simplefilter(\"ignore\", category=RuntimeWarning)\n",
     "if STATIC_PAGE := \"EXECUTE_NB\" in os.environ:\n",
-    "    logging.getLogger(\"ampform.sympy\").setLevel(logging.ERROR)\n",
-    "    logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)"
+    "    mute_ampform_warnings()"
    ]
   },
   {
