--- a/docs/xib2pkk.ipynb
+++ b/docs/xib2pkk.ipynb
@@ -50,7 +50,13 @@
     "from ampform_dpd.decay import State\n",
     "from ampform_dpd.dynamics import RelativisticBreitWigner\n",
     "from ampform_dpd.dynamics.builder import formulate_breit_wigner_with_form_factor\n",
-    "from ampform_dpd.io import as_markdown_table, aslatex, cached, simplify_latex_rendering\n",
+    "from ampform_dpd.io import (\n",
+    "    as_markdown_table,\n",
+    "    aslatex,\n",
+    "    cached,\n",
+    "    mute_ampform_warnings,\n",
+    "    simplify_latex_rendering,\n",
+    ")\n",
     "\n",
     "simplify_latex_rendering()\n",
     "logging.getLogger(\"absl\").setLevel(logging.ERROR)  # mute JAX\n",
@@ -58,7 +64,7 @@
     "\n",
     "STATIC_PAGE = \"EXECUTE_NB\" in os.environ\n",
     "if STATIC_PAGE:\n",
-    "    logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)"
+    "    mute_ampform_warnings()"
    ]
   },
   {
