ENH: improve intensity expression rendering

--- a/docs/comparison/d2kkk.ipynb
+++ b/docs/comparison/d2kkk.ipynb
@@ -195,14 +195,13 @@
      "source_hidden": true
     },
     "tags": [
-     "full-width",
      "hide-input"
     ]
    },
    "outputs": [],
    "source": [
     "model_builder = DalitzPlotDecompositionBuilder(DECAY, min_ls=True)\n",
-    "DPD_MODEL = model_builder.formulate(reference_subsystem=1)\n",
+    "DPD_MODEL = model_builder.formulate(cleanup_summations=True)\n",
     "del model_builder\n",
     "DPD_MODEL.intensity.cleanup()"
    ]
@@ -215,13 +214,12 @@
      "source_hidden": true
     },
     "tags": [
-     "hide-input",
-     "full-width"
+     "hide-input"
     ]
    },
    "outputs": [],
    "source": [
-    "Latex(aslatex(DPD_MODEL.amplitudes))"
+    "Latex(aslatex(DPD_MODEL.amplitudes, terms_per_line=1))"
    ]
   },
   {
@@ -281,7 +279,7 @@
     "model_builder.config.scalar_initial_state_mass = True\n",
     "model_builder.config.stable_final_state_ids = [0, 1, 2]\n",
     "AMPFORM_MODEL = model_builder.formulate()\n",
-    "AMPFORM_MODEL.intensity"
+    "AMPFORM_MODEL.intensity.cleanup()"
    ]
   },
   {
@@ -292,13 +290,12 @@
      "source_hidden": true
     },
     "tags": [
-     "hide-input",
-     "full-width"
+     "hide-input"
     ]
    },
    "outputs": [],
    "source": [
-    "Latex(aslatex(AMPFORM_MODEL.amplitudes))"
+    "Latex(aslatex(AMPFORM_MODEL.amplitudes, terms_per_line=1))"
    ]
   },
   {
