FIX: show widget plot with `plt.show()`

--- a/docs/comparison/jpsi2pipipi.ipynb
+++ b/docs/comparison/jpsi2pipipi.ipynb
@@ -15,6 +15,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -587,9 +596,7 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib widget\n",
-    "plt.rc(\"font\", size=12)\n",
-    "fig, axes = plt.subplots(figsize=(16, 6), ncols=3, nrows=2)\n",
+    "fig, axes = plt.subplots(figsize=(14, 5), ncols=3, nrows=2)\n",
     "fig.canvas.toolbar_visible = False\n",
     "fig.canvas.header_visible = False\n",
     "fig.canvas.footer_visible = False\n",
@@ -609,8 +616,6 @@
     "ax_t1.set_xlabel(Rf\"$\\theta({final_state[2].latex}, {final_state[3].latex})$\")\n",
     "ax_t2.set_xlabel(Rf\"$\\theta({final_state[1].latex}, {final_state[3].latex})$\")\n",
     "ax_t3.set_xlabel(Rf\"$\\theta({final_state[1].latex}, {final_state[2].latex})$\")\n",
-    "fig.suptitle(f\"Selected resonances: ${', '.join(resonance_selector.value)}$\")\n",
-    "fig.tight_layout()\n",
     "\n",
     "lines = None\n",
     "\n",
@@ -663,7 +668,7 @@
     "    kwargs.pop(\"hide_expressions\")\n",
     "    kwargs.pop(\"simplify_expressions\")\n",
     "    selected_resonances = list(resonance_selector.value)\n",
-    "    fig.suptitle(f\"Selected resonances: ${', '.join(selected_resonances)}$\")\n",
+    "    fig.suptitle(f\"Selected resonances: ${', '.join(selected_resonances)}$\", y=0.94)\n",
     "    dpd_pars = {k: int(v) for k, v in kwargs.items() if k in dpd_func.parameters}\n",
     "    ampform_pars = {\n",
     "        k: int(v) for k, v in kwargs.items() if k in ampform_func.parameters\n",
@@ -795,8 +800,6 @@
     "    for ax in axes[1]:\n",
     "        ax.set_ylim(0, 1.05 * ty_max)\n",
     "\n",
-    "    fig.canvas.draw_idle()\n",
-    "\n",
     "    if hide_expressions.value:\n",
     "        clear_output()\n",
     "    else:\n",
@@ -826,7 +829,7 @@
     "        display(Latex(src))\n",
     "\n",
     "\n",
-    "output = interactive_output(\n",
+    "interactive_output(\n",
     "    plot_contributions,\n",
     "    controls={\n",
     "        **sliders,\n",
@@ -835,7 +838,9 @@
     "        \"simplify_expressions\": simplify_expressions,\n",
     "    },\n",
     ")\n",
-    "display(output, ui)"
+    "plt.show()\n",
+    "fig.tight_layout()\n",
+    "display(ui)"
    ]
   }
  ],
