DOC: remove progress bars

--- a/docs/comparison/d2kkk.ipynb
+++ b/docs/comparison/d2kkk.ipynb
@@ -93,7 +93,8 @@
      "code_prompt_show": "Generate transitions"
     },
     "tags": [
-     "hide-input"
+     "hide-input",
+     "remove-output"
     ]
    },
    "outputs": [],
@@ -105,7 +106,22 @@
     "    mass_conservation_factor=0.2,\n",
     "    formalism=\"helicity\",\n",
     ")\n",
-    "REACTION123 = normalize_state_ids(REACTION)\n",
+    "REACTION123 = normalize_state_ids(REACTION)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
     "dot = qrules.io.asdot(REACTION123, collapse_graphs=True)\n",
     "graphviz.Source(dot)"
    ]
@@ -364,7 +380,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "def generate_phase_space(reaction: ReactionInfo, size: int) -> dict[str, jnp.ndarray]:\n",
