--- a/docs/comparison/jpsi2phipipi.ipynb
+++ b/docs/comparison/jpsi2phipipi.ipynb
@@ -15,6 +15,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -29,13 +38,10 @@
    },
    "outputs": [],
    "source": [
-    "from __future__ import annotations\n",
-    "\n",
     "import logging\n",
     "import os\n",
     "import warnings\n",
     "from textwrap import dedent\n",
-    "from typing import TYPE_CHECKING\n",
     "\n",
     "import ampform\n",
     "import graphviz\n",
@@ -59,18 +65,16 @@
     "    VBox,\n",
     "    interactive_output,\n",
     ")\n",
+    "from qrules.transition import ReactionInfo\n",
     "from tensorwaves.data.phasespace import TFPhaseSpaceGenerator\n",
     "from tensorwaves.data.rng import TFUniformRealNumberGenerator\n",
     "from tensorwaves.data.transform import SympyDataTransformer\n",
+    "from tensorwaves.interface import DataSample, ParameterValue, ParametrizedFunction\n",
     "\n",
     "from ampform_dpd import DalitzPlotDecompositionBuilder\n",
     "from ampform_dpd.adapter.qrules import normalize_state_ids, to_three_body_decay\n",
     "from ampform_dpd.decay import Particle\n",
     "from ampform_dpd.io import as_markdown_table, aslatex, cached, simplify_latex_rendering\n",
-    "\n",
-    "if TYPE_CHECKING:\n",
-    "    from qrules.transition import ReactionInfo\n",
-    "    from tensorwaves.interface import DataSample, ParameterValue, ParametrizedFunction\n",
     "\n",
     "simplify_latex_rendering()\n",
     "logging.getLogger(\"jax\").setLevel(logging.ERROR)  # mute JAX\n",
@@ -98,7 +102,8 @@
      "code_prompt_show": "Generate transitions"
     },
     "tags": [
-     "hide-input"
+     "hide-input",
+     "remove-output"
     ]
    },
    "outputs": [],
@@ -110,7 +115,22 @@
     "    mass_conservation_factor=0,\n",
     "    formalism=\"helicity\",\n",
     ")\n",
-    "REACTION123 = normalize_state_ids(REACTION)\n",
+    "REACTION123 = normalize_state_ids(REACTION)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
     "dot = qrules.io.asdot(REACTION123, collapse_graphs=True)\n",
     "graphviz.Source(dot)"
    ]
@@ -200,7 +220,7 @@
    "outputs": [],
    "source": [
     "model_builder = DalitzPlotDecompositionBuilder(DECAY, min_ls=True)\n",
-    "DPD_MODEL = model_builder.formulate(reference_subsystem=1)\n",
+    "DPD_MODEL = model_builder.formulate(cleanup_summations=True)\n",
     "del model_builder\n",
     "DPD_MODEL.intensity.cleanup()"
    ]
@@ -214,12 +234,12 @@
     },
     "tags": [
      "hide-input",
-     "full-width"
+     "scroll-output"
     ]
    },
    "outputs": [],
    "source": [
-    "Latex(aslatex(DPD_MODEL.amplitudes))"
+    "Latex(aslatex(DPD_MODEL.amplitudes, terms_per_line=1))"
    ]
   },
   {
@@ -272,7 +292,7 @@
     "model_builder.config.scalar_initial_state_mass = True\n",
     "model_builder.config.stable_final_state_ids = [0, 1, 2]\n",
     "AMPFORM_MODEL = model_builder.formulate()\n",
-    "AMPFORM_MODEL.intensity"
+    "AMPFORM_MODEL.intensity.cleanup()"
    ]
   },
   {
@@ -284,12 +304,12 @@
     },
     "tags": [
      "hide-input",
-     "full-width"
+     "scroll-output"
     ]
    },
    "outputs": [],
    "source": [
-    "Latex(aslatex(AMPFORM_MODEL.amplitudes))"
+    "Latex(aslatex(AMPFORM_MODEL.amplitudes, terms_per_line=1))"
    ]
   },
   {
@@ -358,7 +378,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "def generate_phase_space(reaction: ReactionInfo, size: int) -> dict[str, jnp.ndarray]:\n",
@@ -573,9 +597,7 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib widget\n",
-    "plt.rc(\"font\", size=12)\n",
-    "fig, axes = plt.subplots(figsize=(16, 6), ncols=3, nrows=2)\n",
+    "fig, axes = plt.subplots(figsize=(14, 5), ncols=3, nrows=2)\n",
     "fig.canvas.toolbar_visible = False\n",
     "fig.canvas.header_visible = False\n",
     "fig.canvas.footer_visible = False\n",
@@ -595,8 +617,6 @@
     "ax_t1.set_xlabel(Rf\"$\\theta({final_state[2].latex}, {final_state[3].latex})$\")\n",
     "ax_t2.set_xlabel(Rf\"$\\theta({final_state[1].latex}, {final_state[3].latex})$\")\n",
     "ax_t3.set_xlabel(Rf\"$\\theta({final_state[1].latex}, {final_state[2].latex})$\")\n",
-    "fig.suptitle(f\"Selected resonances: ${', '.join(resonance_selector.value)}$\")\n",
-    "fig.tight_layout()\n",
     "\n",
     "lines = None\n",
     "\n",
@@ -649,7 +669,7 @@
     "    kwargs.pop(\"hide_expressions\")\n",
     "    kwargs.pop(\"simplify_expressions\")\n",
     "    selected_resonances = list(resonance_selector.value)\n",
-    "    fig.suptitle(f\"Selected resonances: ${', '.join(selected_resonances)}$\")\n",
+    "    fig.suptitle(f\"Selected resonances: ${', '.join(selected_resonances)}$\", y=0.94)\n",
     "    dpd_pars = {k: int(v) for k, v in kwargs.items() if k in dpd_func.parameters}\n",
     "    ampform_pars = {\n",
     "        k: int(v) for k, v in kwargs.items() if k in ampform_func.parameters\n",
@@ -783,8 +803,6 @@
     "    for ax in axes[1]:\n",
     "        ax.set_ylim(0, 1.05 * ty_max)\n",
     "\n",
-    "    fig.canvas.draw_idle()\n",
-    "\n",
     "    if hide_expressions.value:\n",
     "        clear_output()\n",
     "    else:\n",
@@ -814,7 +832,7 @@
     "        display(Latex(src))\n",
     "\n",
     "\n",
-    "output = interactive_output(\n",
+    "interactive_output(\n",
     "    plot_contributions,\n",
     "    controls={\n",
     "        **sliders,\n",
@@ -823,7 +841,9 @@
     "        \"simplify_expressions\": simplify_expressions,\n",
     "    },\n",
     ")\n",
-    "display(output, ui)"
+    "plt.show()\n",
+    "fig.tight_layout()\n",
+    "display(ui)"
    ]
   }
  ],
@@ -846,7 +866,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
