BREAK: replace `EnergyDependentWidth` with AmpForm's implementation

--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -46,6 +46,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import sympy as sp\n",
+    "from ampform.dynamics import EnergyDependentWidth\n",
     "from ampform.dynamics.form_factor import BlattWeisskopfSquared, FormFactor\n",
     "from ampform.dynamics.phasespace import BreakupMomentum, BreakupMomentumSquared\n",
     "from IPython.display import JSON, Math\n",
@@ -57,7 +58,6 @@
     "    BreitWigner,\n",
     "    BuggBreitWigner,\n",
     "    ChannelArguments,\n",
-    "    EnergyDependentWidth,\n",
     "    MultichannelBreitWigner,\n",
     "    SimpleBreitWigner,\n",
     ")\n",
