FEAT: allow selecting phsp factor protocol

--- a/docs/index.ipynb
+++ b/docs/index.ipynb
@@ -472,12 +472,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ampform.dynamics.phasespace import PhaseSpaceFactor\n",
+    "\n",
     "from ampform_dpd.dynamics.builder import BreitWignerBuilder\n",
     "\n",
     "dynamics_builder = BreitWignerBuilder(\n",
     "    energy_dependent_width=True,\n",
     "    production_form_factor=True,\n",
     "    decay_form_factor=True,\n",
+    "    phsp_factor=PhaseSpaceFactor,\n",
     ")\n",
     "for chain in model_builder.decay.chains:\n",
     "    model_builder.dynamics_choices.register_builder(chain, dynamics_builder)\n",
